style: fixes #5 - “we want to explore” block full width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -838,7 +838,7 @@ h2 {
   }
 
 h3 {
-    font-size: 1em;
+    font-size: .85em;
     font-weight: 400;
     line-height: 1.5em
 }
